--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -72,7 +72,10 @@
 
           <h3>FACTS</h3>
           <p>
-            Emilia Fester war bei ihrer Wahl in den Bundestag 2021 mit 23 Jahren die jüngste Abgeordnete. Für Belustigung sorgte sie mit ihrer Forderung nach Wahlrecht für Zweijährige und 
+            Emilia Fester war bei ihrer Wahl in den Bundestag 2021 mit 23 Jahren die jüngste Abgeordnete. 
+          </p>
+          <p>
+            Für Belustigung sorgte sie mit ihrer Forderung nach Wahlrecht für Zweijährige und 
             ihrer dramatischen Rede zur Impfpflicht, in der sie behauptete, ihre Jugend geopfert zu haben, während sie tatsächlich verreist war. 
           </p>
           <p>
