--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -146,7 +146,7 @@
             Der <b>Cum-Ex-Skandal</b> offenbarte einen massiven Steuerbetrug,
             bei dem Banken und Investoren <b>Kapitalertragssteuer</b> mehrfach
             erstattet bekamen, obwohl diese nie gezahlt worden war. Der Betrug
-            führte zu einem Schaden von <mark class="spd">>mehreren Milliarden Euro</mark>,
+            führte zu einem Schaden von <mark class="spd">mehreren Milliarden Euro</mark>,
             den der deutsche Staat nie vollständig zurückerhielt.
           </p>
           <p class="party-highlight-description">
