--- a/linke/index.html
+++ b/linke/index.html
@@ -104,6 +104,7 @@
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">Bodo Ramelow</li>
+        <li class="party-member-item">Heidi Reichinnek</li>
       </ul>
     </section>
 
