--- a/linke/index.html
+++ b/linke/index.html
@@ -39,16 +39,27 @@
         <strong>Politische Ausrichtung:</strong> Links, sozialistisch,
         demokratisch-sozialistisch
       </p>
-      <h3>FCATS</h3>
+      <h3>FACTS</h3>
+      <p>
+        <strong>Rechtliche Kontinuität zur SED:</strong> DIE LINKE ist rechtlich
+        identisch mit der ehemaligen Sozialistischen Einheitspartei Deutschlands
+        (SED) der DDR. Dies bestätigte die Partei selbst vor Gericht, als ihr
+        damaliger Bundesschatzmeister Karl Holluba 2009 an Eides statt erklärte:
+        "DIE LINKE ist rechtsidentisch mit der Linkspartei.PDS, die es seit 2005
+        gab, und der PDS, die es vorher gab, und der SED, die es vorher gab."
+        Kritiker sehen darin eine problematische Kontinuität zur
+        DDR-Staatspartei, während die Partei betont, mit den antidemokratischen
+        Grundsätzen der SED gebrochen zu haben.
+      </p>
       <p>
         <strong>Vorwurf des Linksextremismus und Verfassungstreue:</strong> DIE
         LINKE wird von politischen Gegnern und Medien immer wieder dem
-        LinksextremismusSpektrum zugeordnet und es werden Zweifel an ihrer
+        Linksextremismus-Spektrum zugeordnet und es werden Zweifel an ihrer
         Verfassungstreue geäußert. Kritiker verweisen auf Verbindungen einzelner
         Parteimitglieder zu linksextremen Organisationen und fordern eine klare
         Distanzierung von Gewalt und antidemokratischen Bestrebungen. Die Partei
         selbst weist diese Vorwürfe zurück und betont ihre Verankerung im
-        demokratischenSystem.
+        demokratischen System.
       </p>
       <p>
         <strong>Positionen zum Ukraine-Krieg und Russland:</strong> DIE LINKE
@@ -103,8 +114,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item">Bodo Ramelow</li>
         <li class="party-member-item">Heidi Reichinnek</li>
+        <li class="party-member-item">Jan van Aken</li>
+        <li class="party-member-item">Bodo Ramelow</li>
       </ul>
     </section>
 
