--- a/linke/index.html
+++ b/linke/index.html
@@ -114,7 +114,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item">Heidi Reichinnek</li>
+        <li class="party-member-item">
+          <a href="../reichinnek/">Heidi Reichinnek</a>
+        </li>
         <li class="party-member-item">Jan van Aken</li>
         <li class="party-member-item">Bodo Ramelow</li>
       </ul>
