--- a/linke/index.html
+++ b/linke/index.html
@@ -115,7 +115,7 @@
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="../reichinnek/">Heidi Reichinnek</a>
+          <a href="../linke/reichinnek/">Heidi Reichinnek</a>
         </li>
         <li class="party-member-item">Jan van Aken</li>
         <li class="party-member-item">Bodo Ramelow</li>
