--- a/linke/reichinnek/index.html
+++ b/linke/reichinnek/index.html
@@ -204,6 +204,95 @@
           </div>
         </div>
       </div>
+
+      <!-- Highlight: Reichinnek zu "Kein Sozialismus" -->
+      <div class="party-highlight">
+        <h3 class="party-highlight-title">
+          Heidi Reichinnek: "Das in der DDR war kein Sozialismus"
+        </h3>
+
+        <div class="highlight-skandal-scale">
+          <h4>Geschichtsverzerrung-Skala: 10/10 📚📚📚📚📚📚📚📚📚📚</h4>
+          <p class="highlight-description">
+            Die klassische Sozialisten-Ausrede: "Das war kein echter
+            Sozialismus"!
+          </p>
+          <div class="gradient-bar-container">
+            <div class="gradient-bar-filled" style="width: 100%"></div>
+            <div class="gradient-bar-unfilled" style="width: 0%"></div>
+          </div>
+        </div>
+
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
+
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            In einem Interview mit dem "Stern" ließ Heidi Reichinnek eine
+            historische Bombe platzen: Auf die Frage, ob Sozialismus in der
+            Vergangenheit funktioniert habe, verneinte sie und erklärte kühl:
+            <b class="linke">"Das in der DDR war kein Sozialismus."</b> Für die
+            Vorsitzende der Linken-Fraktion im Bundestag, die sich als Erbin
+            sozialistischer Traditionen versteht, war das ein eklatanter Bruch
+            mit der Parteigeschichte. Sie schob nach:
+            <mark class="linke"
+              >"Also nicht so, wie ihn sich meine Partei vorstellt."</mark
+            >
+          </p>
+
+          <p class="party-highlight-description">
+            Diese "No True Scotsman"-Taktik ist der Klassiker unter Sozialisten:
+            Nach jedem gescheiterten Experiment – von der Sowjetunion über Kuba
+            bis Venezuela – heißt es plötzlich "Das war kein richtiger
+            Sozialismus". Ökonom Christian Niemietz zählt über zwei Dutzend
+            solcher Katastrophen, die alle auf Marx basierten, genau wie
+            Reichinneks Ideale. Doch statt die Lehren zu ziehen, distanziert sie
+            sich von der DDR, die rechtlich sogar die Rechtsnachfolgerin ihrer
+            eigenen Partei (SED) ist. Kritiker wie Dr. Rainer Zitelmann sehen
+            darin pure Geschichtsfälschung: Die DDR verstaatlichte genau das,
+            was Marx forderte – Privateigentum abschaffen. Aber Reichinnek
+            träumt von einer "Utopie", die sie in Schritten umsetzen will:
+            Daseinsvorsorge verstaatlichen, Reichtum umverteilen. Genau das
+            führte in der DDR zu 65% der Wohnungen mit Kohleöfen, 24% ohne
+            Innentoilette und 80 Milliarden Euro Sanierungskosten für den
+            Westen. Ein Rezept für Desaster, verpackt als "demokratischer
+            Sozialismus".
+          </p>
+
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/wAiNKzTEokk?si=VjblTTAGu3KeTN8C"
+                title="Heidi Reichinnek im Stern-Interview: 'Das in der DDR war kein Sozialismus'"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> September 2025
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://die-deutsche-wirtschaft.de/reichinneks-sozialismus-luege-das-in-der-ddr-war-kein-sozialismus/"
+              target="_blank"
+              >Die Deutsche Wirtschaft: Reichinneks Sozialismus-Lüge: „Das in
+              der DDR war kein Sozialismus“</a
+            >
+          </p>
+
+          <div class="party-highlight-hashtags">
+            <a href="./">#reichinnek</a>
+            <a href="../">#linke</a>
+            <span class="hashtag">#sozialismus</span>
+            <span class="hashtag">#ddr</span>
+            <span class="hashtag">#geschichtsverzerrung</span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="party-footer">
