--- a/linke/reichinnek/index.html
+++ b/linke/reichinnek/index.html
@@ -92,18 +92,18 @@
 
           <h3>FACTS</h3>
           <p>
-            Heidi Reichinnek ist bekannt für ihre **radikalen sozialistischen
-            Positionen** und ihre Forderung nach "Enteignung von Milliardären",
+            Heidi Reichinnek ist bekannt für ihre <strong>radikalen sozialistischen
+            Positionen <strong> und ihre Forderung nach "Enteignung von Milliardären",
             die sie als "Bedrohung für die Demokratie" bezeichnet.
           </p>
           <p>
-            2016 warb sie in einem Aufsatz für **linke Bündnisse mit
-            islamistischen Fundamentalisten**, einschließlich der
+            2016 warb sie in einem Aufsatz für  <strong>linke Bündnisse mit
+            islamistischen Fundamentalisten<strong> einschließlich der
             Muslimbruderschaft – eine Position, die sie 2025 als gescheitert
             einräumte.
           </p>
           <p>
-            Als **TikTok-Star der Linken** erzielte sie mit provokanten Videos
+            Als <strong>TikTok-Star der Linken<strong> erzielte sie mit provokanten Videos
             Millionen von Aufrufen und über 500.000 Follower, wird aber auch für
             mangelnde Sachkenntnis kritisiert.
           </p>
