--- a/linke/reichinnek/index.html
+++ b/linke/reichinnek/index.html
@@ -92,20 +92,21 @@
 
           <h3>FACTS</h3>
           <p>
-            Heidi Reichinnek ist bekannt für ihre <strong>radikalen sozialistischen
-            Positionen <strong> und ihre Forderung nach "Enteignung von Milliardären",
-            die sie als "Bedrohung für die Demokratie" bezeichnet.
+            Heidi Reichinnek ist bekannt für ihre
+            <strong>radikalen sozialistischen Positionen</strong> und ihre
+            Forderung nach "Enteignung von Milliardären", die sie als "Bedrohung
+            für die Demokratie" bezeichnet.
           </p>
           <p>
-            2016 warb sie in einem Aufsatz für  <strong>linke Bündnisse mit
-            islamistischen Fundamentalisten<strong> einschließlich der
-            Muslimbruderschaft – eine Position, die sie 2025 als gescheitert
-            einräumte.
+            2016 warb sie in einem Aufsatz für
+            <strong>linke Bündnisse mit islamistischen Fundamentalisten</strong>
+            einschließlich der Muslimbruderschaft – eine Position, die sie 2025
+            als gescheitert einräumte.
           </p>
           <p>
-            Als <strong>TikTok-Star der Linken<strong> erzielte sie mit provokanten Videos
-            Millionen von Aufrufen und über 500.000 Follower, wird aber auch für
-            mangelnde Sachkenntnis kritisiert.
+            Als <strong>TikTok-Star der Linken</strong> erzielte sie mit
+            provokanten Videos Millionen von Aufrufen und über 500.000 Follower,
+            wird aber auch für mangelnde Sachkenntnis kritisiert.
           </p>
         </div>
 
