institutions + js dazu

--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
         </div>
       </section>
 
+      <!-- Institutionen Section -->
+      <section id="institutions" class="institutions">
+        <div class="content-block">
+          <h2>Deutsche</h2>
+          <div class="institution-grid" id="institutionGrid" role="grid">
+            <!-- Dynamically populated from JS -->
+          </div>
+        </div>
+      </section>
+
       <!-- International Personalities Section -->
       <section
         id="international-personalities"
