--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       <!-- Institutionen Section -->
       <section id="institutions" class="institutions">
         <div class="content-block">
-          <h2>Deutsche</h2>
-          <div class="institution-grid" id="institutionGrid" role="grid">
+          <h2>Institutionen</h2>
+          <div class="party-grid" id="institutionGrid" role="grid">
             <!-- Dynamically populated from JS -->
           </div>
         </div>
