--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </section>
 
       <!-- Institutionen Section -->
-      <section id="institutions" class="institutions">
+      <section id="institutions" class="parties">
         <div class="content-block">
           <h2>Institutionen</h2>
           <div class="party-grid" id="institutionGrid" role="grid">
