--- a/oerr/index.html
+++ b/oerr/index.html
@@ -125,8 +125,8 @@
           </p>
           <p class="party-highlight-description">
             Besonders perfide: Auch wer kein Fernsehen schaut und kein Radio
-            hört, muss zahlen. Selbst Obdachlose, Studenten und Rentner werden
-            zur Kasse gebeten. Das System kennt keine Gnade und
+            hört, muss zahlen. Niemand hat je ÖRR-Produkte bestellt, aber zur
+            Kasse gebeten werden wir trotzdem alle.
             <strong>keine Verhältnismäßigkeit</strong>.
           </p>
 
@@ -191,17 +191,15 @@
             offenbarte sich als korruptes Netzwerk der Selbstbereicherung.
           </p>
 
-          <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> 2022-2023
-          </p>
+          <p class="party-highlight-date"><strong>Zeitraum:</strong> 2022</p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
             <a
-              href="https://de.wikipedia.org/wiki/Aff%C3%A4re_um_Patricia_Schlesinger"
+              href="https://www.businessinsider.de/wirtschaft/beratervertraege-luxus-dienstwagen-abendessen-auf-rbb-kosten-wie-es-zum-ruecktritt-der-ard-chefin-patricia-schlesinger-kam-a/"
               target="_blank"
+              >Business Insider: Luxus-Auto, Verdacht auf Spesenbetrug,
+              Berater-Aufträge für ihren Mann</a
             >
-              Wikipedia: RBB-Skandal um Patricia Schlesinger
-            </a>
           </p>
 
           <p class="party-highlight-hashtags">
