--- a/oerr/index.html
+++ b/oerr/index.html
@@ -281,7 +281,9 @@
         <li class="party-member-item">Norbert Himmler (ZDF-Intendant)</li>
         <li class="party-member-item">Tom Buhrow (WDR-Intendant)</li>
         <li class="party-member-item">
-          Patricia Schlesinger (ehemalige RBB-Intendantin)
+          <a href="../schlesinger/"
+            >Patricia Schlesinger (ehemalige RBB-Intendantin)</a
+          >
         </li>
         <li class="party-member-item">Dunja Hayali (Fernsehmoderatorin)</li>
       </ul>
