--- a/oerr/schlesinger/index.html
+++ b/oerr/schlesinger/index.html
@@ -58,7 +58,7 @@
             Führungspositionen beim NDR
           </p>
 
-          <h3>Politische/berufliche Laufbahn</h3>
+          <h3>Berufliche Laufbahn</h3>
           <p>
             <strong>1. Juli 2016 – 8. August 2022:</strong> Intendantin des
             Rundfunks Berlin-Brandenburg (RBB)
@@ -98,10 +98,16 @@
             Ermittlungen wegen Untreue und Vorteilsannahme laufen bis heute.
           </p>
           <p>
-            <strong>Aktuelle Lage:</strong> Juli 2025 wurde Schlesinger zu
-            Schadenersatz verurteilt, erhält aber weiterhin 18.400€ monatliches
-            Ruhegeld. Seit Juli 2025 arbeitet sie als Beraterin bei der Agentur
-            Stella Circle.
+            <strong>Aktuelle Lage (Stand: September 2025):</strong> Juli 2025
+            wurde Schlesinger zu Schadenersatz von 24.000€ für
+            Dienstwagen/Reisekosten verurteilt, erhält aber 18.400€ monatliches
+            Ruhegeld.
+            <mark class="oerr">Beide Seiten gingen in Berufung</mark> - der RBB
+            fordert über 12,9 Millionen€ Schadenersatz für das "Digitale
+            Medienhaus"-Projekt. September 2025: Neue Kontroverse um
+            <mark class="oerr">mögliche Befangenheit der Richterin</mark>, die
+            jahrelang Schlesingers Nachbarin war. Seit Juli 2025 arbeitet sie
+            als Beraterin bei der Agentur Stella Circle.
           </p>
         </div>
         <img
