--- a/oerr/index.html
+++ b/oerr/index.html
@@ -281,11 +281,8 @@
         <li class="party-member-item">Norbert Himmler (ZDF-Intendant)</li>
         <li class="party-member-item">Tom Buhrow (WDR-Intendant)</li>
         <li class="party-member-item">
-          <a href="../oerr/schlesinger/"
-            >Patricia Schlesinger (ehemalige RBB-Intendantin)</a
-          >
-        </li>
-        <li class="party-member-item">Dunja Hayali (Fernsehmoderatorin)</li>
+          <a href="../oerr/schlesinger/">Patricia Schlesinger (ehemalige RBB-Intendantin)</a></li>
+          <a href="../oerr/hayali/">Dunja Hayali (Fernsehmoderatorin)</a></li>
       </ul>
     </section>
 
