--- a/oerr/schlesinger/index.html
+++ b/oerr/schlesinger/index.html
@@ -402,8 +402,8 @@
         <li class="party-member-item">Kai Gniffke (ARD-Vorsitzender)</li>
         <li class="party-member-item">Norbert Himmler (ZDF-Intendant)</li>
         <li class="party-member-item">Tom Buhrow (WDR-Intendant)</li>
-        <li class="party-member-item">Dunja Hayali (Fernsehmoderatorin)</li>
-      </ul>
+        <li class="party-member-item">
+          <a href="../oerr/hayali/">Dunja Hayali (Fernsehmoderatorin)</a></li>
     </section>
 
     <footer class="party-footer">
