--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -155,10 +155,12 @@
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
             <a
-              href="https://taz.de/Nach-Social-Media-Shitstorm/!6113897/"
+              href="https://weltwoche.de/daily/mordfall-charlie-kirk-ueber-dunja-hayali-und-die-abgruende-einer-angeblich-so-offenen-gesellschaft-die-verstaendnis-fuer-den-mord-an-politischen-gegnern-zeigt/"
               target="_blank"
             >
-              taz: Dunja Hayali zieht sich aus Öffentlichkeit zurück
+              Weltwoche: Über Dunja Hayali und die Abgründe einer angeblich so
+              offenen Gesellschaft, die Verständnis für den Mord an politischen
+              Gegnern zeigt
             </a>
           </p>
 
