--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -215,7 +215,9 @@
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
-            <a href="#" target="_blank"
+            <a
+              href="https://www.ndr.de/fernsehen/sendungen/zapp/medienpolitik/Prominent-praesentiert-Dunja-Hayalis-Nebentaetigkeiten,nebentaetigkeit100.html"
+              target="_blank"
               >NDR Zapp: Interessenkonflikte bei Hayali</a
             >
           </p>
