--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -239,7 +239,7 @@
         <li class="party-member-item">Norbert Himmler (ZDF-Intendant)</li>
         <li class="party-member-item">Tom Buhrow (WDR-Intendant)</li>
         <li class="party-member-item">
-          <a href="../oerr/schlesinger/"
+          <a href="../schlesinger/"
             >Patricia Schlesinger (ehemalige RBB-Intendantin)</a
           >
         </li>
