--- a/oerr/schlesinger/index.html
+++ b/oerr/schlesinger/index.html
@@ -403,7 +403,7 @@
         <li class="party-member-item">Norbert Himmler (ZDF-Intendant)</li>
         <li class="party-member-item">Tom Buhrow (WDR-Intendant)</li>
         <li class="party-member-item">
-          <a href="../oerr/hayali/">Dunja Hayali (Fernsehmoderatorin)</a></li>
+          <a href="../hayali/">Dunja Hayali (Fernsehmoderatorin)</a></li>
     </section>
 
     <footer class="party-footer">
