Skandale Bas hinzugefügt

--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -81,184 +81,91 @@
       
             <h3>FACTS</h3>
             <p>
-              Ihr Start im Arbeitsministerium 2025 war holprig, ihr Verhältnis zur Wirtschaft ist mittlerweile katastrophal. Der Tiefpunkt: Auf dem Arbeitgebertag versuchte sie, ein teures Rentenpaket mit der Milchmädchenrechnung zu verkaufen, es würde die Beitragszahler nicht belasten – weil es ja aus Steuermitteln bezahlt werde. Als das fachkundige Publikum über diese ökonomische Augenwischerei lachte, entdeckte Bas ihr inneres Juso-Mitglied wieder.
+              Auf dem Arbeitgebertag versuchte Bas, ein teures Rentenpaket mit der Milchmädchenrechnung zu verkaufen, es würde die Beitragszahler nicht belasten – weil es ja aus Steuermitteln bezahlt werde, was das Publikum zum Lachen brachte.
             </p>
       
             <p>
-              Beleidigt erklärte sie daraufhin die Arbeitgeber quasi zum Feindbild. In bester Klassenkampf-Rhetorik wetterte sie gegen „Herren in Maßanzügen“ und bequemen Sesseln, gegen die man „gemeinsam kämpfen“ müsse. Dass eine amtierende Arbeitsministerin öffentlich zum Kampf gegen jene aufruft, die die Arbeitsplätze schaffen, gilt selbst in Berlin als Novum. Die Union nennt sie bereits eine „Fehlbesetzung“, während Bas beweist, dass man auch in einer Koalition unter Friedrich Merz linkspopulistische Töne spucken kann, wenn das Ego angekratzt ist.
+              Beleidigt erklärte sie daraufhin die Arbeitgeber zum Feindbild. In bester Klassenkampf-Rhetorik wetterte sie gegen „Herren in Maßanzügen“ und bequemen Sesseln, gegen die man „gemeinsam kämpfen“ müsse. Dass eine amtierende Arbeitsministerin öffentlich zum Kampf gegen jene aufruft, die die Arbeitsplätze schaffen, gilt selbst in Berlin als Novum. Die Union nannte sie daraufhin eine „Fehlbesetzung“.
             </p>
           </div>
 
         <img
           class="bio-image"
-          src="https://i.imgur.com/u824jK1.png"
+          src="https://i.imgur.com/C5e83pt.jpeg"
           alt="Bärbel Bas"
         />
       </div>
     </section>
 
-    <!-- Highlights Section -->
-    <section class="party-highlights">
-      <h2 class="party-section-title">Skandale und Kontroversen</h2>
+   <!-- Highlights Section -->
+   <section class="party-highlights">
+    <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
-      <!-- Highlight 1: Regenbogenbinde -->
-      <div class="party-highlight">
-        <h3 class="party-highlight-title">Regenbogenbinde in Katar</h3>
+    <!-- Highlight 1: Arbeitgebertag & Klassenkampf -->
+    <div class="party-highlight">
+      <h3 class="party-highlight-title">Der "Klassenkampf"-Eklat</h3>
 
-        <div class="highlight-skandal-scale">
-          <h4>Selbstdarstellung: 9/10 🌈🌈🌈🌈🌈🌈🌈🌈🌈⚪</h4>
-          <p class="highlight-description">
-            Wichtiger als sportlicher Erfolg: Ideologische Statements aus
-            Deutschland.
-          </p>
-        </div>
-
-        <div class="gradient-bar-container">
-          <div class="gradient-bar-filled" style="width: 90%"></div>
-          <div class="gradient-bar-unfilled" style="width: 10%"></div>
-        </div>
-
-        <button class="toggle-button" onclick="toggleHighlight(this)">
-          Details anzeigen <span class="arrow">▼</span>
-        </button>
-
-        <div class="collapsible-content">
-          <p class="party-highlight-description">
-            Im Mai 2022 trug Faeser beim WM-Auftakt der deutschen
-            Nationalmannschaft in Katar eine
-            <strong>Regenbogenbinde</strong> und setzte damit ein deutliches
-            Zeichen für <strong>Offenheit und Vielfalt</strong>. Die ganze Welt
-            lachte über die Binde und die politische Ablenkung, die das Team
-            noch tiefer in ideologische Debatten verstrickte.
-            <mark class="spd">Kritiker</mark>
-            behaupten, dass diese unnötige Thematik mehr zum Versagen der
-            Mannschaft beitrug als jede taktische Fehlentscheidung – schließlich
-            hätte man sich vielleicht lieber auf das Spiel konzentrieren sollen.
-          </p>
-          <p class="party-highlight-description">
-            Warum die WM ausgerechnet nach
-            <mark class="spd">Katar</mark> vergeben wurde, einem Land mit einer
-            <strong>katastrophalen Menschenrechtsbilanz</strong>, ist völlig
-            unverständlich. Hätte man sich das nicht schon vorher überlegen
-            können? Oder war es doch eher eine Frage des
-            <strong>Geldes und politischer Interessen</strong>, die den
-            sportlichen Erfolg in den Hintergrund rückten?
-          </p>
-
-          <div class="smallvideo-container">
-            <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/hA0OQm8Gecs?si=qlXgxpxDltFS9I88"
-                title="WM 2022: Nach der Pleite gegen Japan herrscht Krisen-Stimmung in Katar"
-                frameborder="0"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
-
-          <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> Mai 2022
-          </p>
-
-          <p class="party-highlight-source">
-            <strong>Quelle:</strong>
-            <a
-              href="https://www.sueddeutsche.de/sport/nationalmannschaft-one-love-debatte-bei-wm-voeller-kritisiert-auch-faeser-dpa.urn-newsml-dpa-com-20090101-230120-99-295626"
-              target="_blank"
-              >„One Love“-Debatte bei WM: Völler kritisiert auch Faeser
-            </a>
-          </p>
-
-          <div class="party-highlight-hashtags">
-            <a href="../">#spd</a>
-            <span class="hashtag">#regenbogenbinde</span>
-            <span class="hashtag">#katar</span>
-            <span class="hashtag">#diskriminierung</span>
-          </div>
-        </div>
+      <div class="highlight-skandal-scale">
+        <h4>Wirtschaftskompetenz: 1/10 📉⚪⚪⚪⚪⚪⚪⚪⚪⚪</h4>
+        <p class="highlight-description">
+          Wenn Argumente fehlen, hilft nur noch das Feindbild: Bas erklärt Arbeitgeber zum Gegner.
+        </p>
       </div>
 
-      <!-- Highlight 2: Marsch mit Polizistenhassern beim CSD -->
-      <div class="party-highlight">
-        <h3 class="party-highlight-title">
-          Marsch mit Polizistenhassern beim CSD
-        </h3>
+      <div class="gradient-bar-container">
+        <div class="gradient-bar-filled" style="width: 10%"></div>
+        <div class="gradient-bar-unfilled" style="width: 90%"></div>
+      </div>
 
-        <div class="highlight-skandal-scale">
-          <h4>Richtige Haltung: 7/10 🚨🚨🚨🚨🚨🚨🚨⚪⚪⚪</h4>
-          <p class="highlight-description">
-            Faeser marschierte beim CSD 2022 stolz Seite an Seite mit Gruppen,
-            die Polizisten pauschal ablehnen – ein beeindruckender Schritt, mit
-            dem sie die richtige Haltung demonstrierte.
+      <button class="toggle-button" onclick="toggleHighlight(this)">
+        Details anzeigen <span class="arrow">▼</span>
+      </button>
+
+      <div class="collapsible-content">
+        <p class="party-highlight-description">
+          Im November 2025 sorgte Bärbel Bas für einen der absurdesten Momente der Legislaturperiode. Beim <strong>Deutschen Arbeitgebertag</strong> versuchte sie, ihr teures Rentenpaket mit einer ökonomischen Milchmädchenrechnung zu verteidigen: Die Kosten würden niemanden belasten, da sie ja aus <mark class="spd">Steuermitteln</mark> finanziert seien.
+        </p>
+        <p class="party-highlight-description">
+          Als die anwesenden Unternehmer über so viel Naivität <strong>lachten</strong>, reagierte die Ministerin nicht etwa souverän, sondern tief gekränkt. Später holte sie bei den Jusos zum Gegenschlag aus und rief offen zum <mark class="spd">Kampf</mark> gegen die „Herren in bequemen Sesseln und Maßanzügen“ auf.
+          Damit ist sie wohl die erste Arbeitsministerin der Geschichte, die die Schaffung von Arbeitsplätzen mit einem Kriegszustand verwechselt, nachdem ihr Ego angekratzt wurde.
+        </p>
+
+        <div class="smallvideo-container">
+          <div class="video-wrapper">
+            <iframe
+              src="https://www.youtube.com/embed/Hxplsf8x9Zw?si=ZW74Lo7Z4Yq6BXAp"
+              title="PEINLICH! Ministerin versteht eigene Rentenpolitik nicht"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <p style="font-size: 0.8rem; color: #666; margin-top: 5px;">
+            <em>(Video: Bas erklärt Ökonomie, das Publikum reagiert entsprechend)</em>
           </p>
         </div>
 
-        <div class="gradient-bar-container">
-          <div class="gradient-bar-filled" style="width: 70%"></div>
-          <div class="gradient-bar-unfilled" style="width: 30%"></div>
-        </div>
+        <p class="party-highlight-date">
+          <strong>Zeitraum:</strong> November/Dezember 2025
+        </p>
 
-        <button class="toggle-button" onclick="toggleHighlight(this)">
-          Details anzeigen <span class="arrow">▼</span>
-        </button>
+        <p class="party-highlight-source">
+          <strong>Quelle:</strong>
+          <a
+            href="https://www.tagesspiegel.de/politik/eine-fehlbesetzung-im-amt-union-und-handwerk-kritisieren-arbeitsministerin-bas-15001022.html"
+            target="_blank"
+            >„Eine Fehlbesetzung im Amt“: Union und Handwerk kritisieren Arbeitsministerin Bas
+          </a>
+        </p>
 
-        <div class="collapsible-content">
-          <p class="party-highlight-description">
-            Am 15. Juli 2023 nahm <strong>Nancy Faeser</strong> als
-            <strong>Bundesinnenministerin</strong> am CSD in Frankfurt teil.
-            Besonders bemerkenswert war, dass sie, nachdem sie zuvor bei den
-            Corona-Demos noch mahnte, man solle vorsichtig sein, mit wem man da
-            marschiere, nun selbst Seite an Seite mit vermummten Demonstranten
-            zog, die zu Hass und Gewalt gegen die Polizei aufriefen. Das Symbol
-            „1312“, das für „ACAB“ („Alle Cops sind Bastarde“) steht, war
-            ebenfalls präsent – ein interessanter Gegensatz zu Faesers Rolle als
-            Innenministerin, die eigentlich für den Schutz der Polizei zuständig
-            ist.
-          </p>
-          <p class="party-highlight-description">
-            Statt sich in ihrer Funktion als Ministerin von solchen
-            Gruppierungen abzugrenzen, marschierte Faeser direkt mit ihnen – ein
-            mutiger Schritt, der mal wieder ihre korrekte Haltung zu
-            <mark class="spd">Vielfalt</mark> und
-            <mark class="spd">Offenheit</mark> klarmachte.
-          </p>
-
-          <div class="smallvideo-container">
-            <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
-                title="CSD Frankfurt 2023 mit Nancy Faeser"
-                frameborder="0"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
-
-          <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> Juli 2023
-          </p>
-
-          <p class="party-highlight-source">
-            <strong>Quelle:</strong>
-            <a
-              href="https://www.nius.de/politik/news/skandal-bei-csd-in-frankfurt-innenministerin-faeser-marschiert-mit-polizei-hassern/ec1c85b9-626a-43b8-a13a-42763458f83a"
-              target="_blank"
-            >
-              Skandal bei CSD in Frankfurt: Innenministerin Faeser marschiert
-              mit Polizei-Hassern
-            </a>
-          </p>
-
-          <div class="party-highlight-hashtags">
-            <span class="hashtag">#csd</span>
-            <span class="hashtag">#haltung</span>
-            <span class="hashtag">#faeser</span>
-            <a href="../">#spd</a>
-            <span class="hashtag">#innenministerin</span>
-          </div>
+        <div class="party-highlight-hashtags">
+          <span class="hashtag">#klassenkampf</span>
+          <span class="hashtag">#arbeitgebertag</span>
+          <a href="../">#spd</a>
+          <span class="hashtag">#arbeitsministerin</span>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
@@ -272,6 +179,9 @@
         <li class="party-member-item">
           <a href="../esken/">Saskia Esken</a>
         </li>
+        <li class="party-member-item">
+            <a href="../feaser/">Nancy Faeser</a>
+          </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
