--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -130,20 +130,27 @@
           Damit ist sie wohl die erste Arbeitsministerin der Geschichte, die die Schaffung von Arbeitsplätzen mit einem Kriegszustand verwechselt, nachdem ihr Ego angekratzt wurde.
         </p>
 
-        <div class="smallvideo-container">
-          <div class="video-wrapper">
-            <iframe
+        <div class="smallvideo-container two-videos">
+                        <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/loy_pf8CMR0?si=5axEQzBWr6k8U5a6"
+                title="Peinlicher Moment auf Arbeitgebertag: Ministerin Bärbel Bas ausgelacht"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+            
+            <div class="video-wrapper">
+              <iframe
               src="https://www.youtube.com/embed/Hxplsf8x9Zw?si=ZW74Lo7Z4Yq6BXAp"
               title="PEINLICH! Ministerin versteht eigene Rentenpolitik nicht"
               frameborder="0"
               allowfullscreen
             ></iframe>
           </div>
-          <p style="font-size: 0.8rem; color: #666; margin-top: 5px;">
-            <em>(Video: Bas erklärt Ökonomie, das Publikum reagiert entsprechend)</em>
-          </p>
-        </div>
 
+          </div>
+          
         <p class="party-highlight-date">
           <strong>Zeitraum:</strong> November/Dezember 2025
         </p>
