--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -71,7 +71,7 @@
           <h3>Politische Laufbahn</h3>
           <p>
             <strong>Seit 06/2025:</strong> SPD-Bundesvorsitzende (Doppelspitze
-            mit Lars Klingbeil)
+            mit <a href="../klingbeil/">Lars Klingbeil</a>)
           </p>
           <p>
             <strong>Seit 05/2025:</strong> Bundesministerin für Arbeit und
@@ -166,12 +166,12 @@
 
           <p class="party-highlight-description">
             <strong>Der "Sexismus-Joker":</strong> Bei „Maischberger“ versuchte
-            Vizekanzler Lars Klingbeil dann die Flucht nach vorn. Seine Analyse,
-            warum er Applaus bekam und Bas Gelächter erntete? Natürlich nicht
-            der Inhalt, sondern das Geschlecht.
-            <em>„Die Frau wird ausgelacht“</em>, beklagte Klingbeil und erklärte
-            Kritik an schlechter Rechenkunst kurzerhand zur Respektlosigkeit
-            unter Demokraten.
+            Vizekanzler <a href="../klingbeil/">Lars Klingbeil</a> dann die
+            Flucht nach vorn. Seine Analyse, warum er Applaus bekam und Bas
+            Gelächter erntete? Natürlich nicht der Inhalt, sondern das
+            Geschlecht. <em>„Die Frau wird ausgelacht“</em>, beklagte Klingbeil
+            und erklärte Kritik an schlechter Rechenkunst kurzerhand zur
+            Respektlosigkeit unter Demokraten.
           </p>
 
           <p class="party-highlight-description">
@@ -212,7 +212,7 @@
           </p>
 
           <p class="party-highlight-source">
-            <strong>Quelle:</strong>
+            <strong>Quelle:</strong> Tagesspiegel-
             <a
               href="https://www.tagesspiegel.de/politik/eine-fehlbesetzung-im-amt-union-und-handwerk-kritisieren-arbeitsministerin-bas-15001022.html"
               target="_blank"
