--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -293,6 +293,9 @@
         <li class="party-member-item">
           <a href="../esken/">Saskia Esken</a>
         </li>
+        <li class="party-member-item">
+          <a href="../bas/">Bärbel Bas</a>
+        </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
