--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -180,6 +180,9 @@
         <li class="party-member-item">
           <a href="../faeser/">Nancy Faeser</a>
         </li>
+        <li class="party-member-item">
+          <a href="../bas/">Bärbel Bas</a>
+        </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
