--- a/spd/index.html
+++ b/spd/index.html
@@ -559,6 +559,9 @@
         <li class="party-member-item">
           <a href="../spd/faeser/">Nancy Faeser</a>
         </li>
+        <li class="party-member-item">
+          <a href="../spd/bas/">Bärbel Bas</a>
+        </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
