--- a/linke/reichinnek/index.html
+++ b/linke/reichinnek/index.html
@@ -123,7 +123,7 @@
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
       <!-- Highlight 1: Reichinnek zu Charlie Kirk -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="empathie">
         <h3 class="party-highlight-title">
           Heidi Reichinnek und ihre Reaktion auf den Mord an Charlie Kirk
         </h3>
