--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -123,8 +123,8 @@
     <section class="party-highlights">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
-      <!-- Highlight 1: Arbeitgebertag & Klassenkampf -->
-      <div class="party-highlight">
+      <!-- Highlight: Arbeitgebertag & Klassenkampf -->
+      <div class="party-highlight" id="klassenkampf">
         <h3 class="party-highlight-title">Der "Klassenkampf"-Eklat</h3>
 
         <div class="highlight-skandal-scale">
