--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
         <h2>NEWS</h2>
         <ul class="news-list">
           <li>
+            <strong>Dezember 2025:</strong> Arbeitsministerin Bas (SPD) erklärt
+            Arbeitgeber zum Feind
+            <a href="https://factico.eu/spd/bas/#klassenkampf">Mehr lesen</a>
+          </li>
+          <ul class="news-list">
+            <li>
+              <strong>Dezember 2025:</strong> So denkt Reichinnek (Linke) über die Ermordung von Charlie Kirk 
+              <a href="https://factico.eu/spd/linke/#empathie">Mehr lesen</a>
+            </li>
+          <li>
             <strong>März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
             <a href="https://factico.eu/cducsu/merz/#schuldenbremse"
               >Mehr lesen</a
@@ -85,10 +95,6 @@
           <li>
             <strong>März 2025:</strong> Der Untergang der FDP
             <a href="https://factico.eu/fdp/#fdp-untergang">Mehr lesen</a>
-          </li>
-          <li>
-            <strong>Januar 2025:</strong> Elon Musk ist ein Lügner
-            <a href="https://factico.eu/usa/musk/#muskgaming">Mehr lesen</a>
           </li>
         </ul>
       </section>
